<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EatOutside</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="recommend">精彩推荐</string>
    <string name="firstPage">首页</string>
    <string name="user">个人</string>
    <string name="back">&lt;</string>
    <string name="userinfo_setting">个人信息设置</string>
    <string name="nickname">昵称</string>
    <string name="changeImg">修改头像</string>
    <string name="gender">性别</string>
    <string name="gender_secret">保密</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="save">保存</string>
    <string name="birth">生日</string>
    <string name="setDate">设置日期</string>
    <string name="loading">正在获取...</string>
    <string name="init">进入程序的初始图片</string>
    <string name="gt">&gt;</string>
    <string name="main_news">消息</string>
    <string name="main_home">首页</string>
    <string name="title_activity_near_search">NearSearch</string>

</resources>
