<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left" >

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shapetwo"
                android:text="@string/back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_setting"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>
	<View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="1.0px"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/pic"
                android:layout_width="fill_parent"
                android:layout_height="136dp"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center" >

        <Button
            android:id="@+id/changePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:background="@drawable/shapetwo"
            android:text="@string/changeImg" />
    </LinearLayout>

	<View
	    android:layout_width="match_parent"
	    android:layout_height="10dp"
	    android:layout_marginBottom="1.0px"
	    android:background="#F0F0F0" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#FFFFFF" >

	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_marginLeft="10dp"
	        android:gravity="center"
	        android:text="@string/nickname"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="25sp" />

	    <Button
	        android:id="@+id/nikebutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="25dp"
	        android:layout_weight="0.22"
	        android:background="#FFFFFF"
	        android:gravity="left|center"
	        android:text="@string/loading"
	        android:textSize="20sp" />

	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/gt"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	</LinearLayout>

	<View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="1.0px"
        android:background="@android:color/darker_gray" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#FFFFFF" >

	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_marginLeft="10dp"
	        android:gravity="center"
	        android:text="@string/gender"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="25sp" />

	    <Button
	        android:id="@+id/genderbutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="25dp"
	        android:layout_weight="0.68"
	        android:background="#FFFFFF"
	        android:gravity="left|center"
	        android:text="@string/loading"
	        android:textSize="20sp" />

	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/gt"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	</LinearLayout>

	<View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="1.0px"
        android:background="@android:color/darker_gray" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#FFFFFF" >

	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_marginLeft="10dp"
	        android:gravity="center"
	        android:text="@string/birth"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="25sp" />

	    <Button
	        android:id="@+id/birthbtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="25dp"
	        android:layout_weight="0.24"
	        android:background="#FFFFFF"
	        android:gravity="left|center"
	        android:text="@string/loading"
	        android:textSize="20sp" />

	    <TextView
	        android:id="@+id/textView8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/gt"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	</LinearLayout>

	<View
	    android:layout_width="match_parent"
	    android:layout_height="15dp"
	    android:layout_marginBottom="1.0px"
	    android:background="#F0F0F0" />

	<Button
	    android:id="@+id/save"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#FFD700"
	    android:text="@string/save"
	    android:textColor="#FFFFFF"
	    android:textColorHint="#FFFFFF" />

</LinearLayout>